<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_background_login"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/txt_welcome"
            android:textColor="@color/secondary_200"
            android:textSize="17sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_create_your_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/ic_background_button"
            android:text="@string/txt_btn_create_your_account" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_register_with"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14sp"
            android:text="@string/txt_register_with"
            android:textAlignment="center"
            android:textColor="@color/secondary_200" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_logo_facebook"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="140dp"
            android:src="@drawable/ic_logo_facebook" />

        <ImageView
            android:id="@+id/iv_logo_google"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="70dp"
            android:src="@drawable/ic_logo_google" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="30sp">

        <View
            android:id="@+id/view_separate_image"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="110dp"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/tv_have_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/txt_have_account"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_login"
            android:textColor="@color/primary_500"
            android:textSize="14sp"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>